--- a/css/media.css
+++ b/css/media.css
@@ -1,6 +1,11 @@
 /*MEDIA QUERIES FOR XXS DEVICES (<320px)*/
 @media screen and (max-width:320px) {
 
+    body {
+        overflow-x: hidden;
+        width: 100%;
+    }
+
     .headerbar {
         padding: 1rem 1rem 1rem 1rem;
         display: block;
@@ -188,6 +193,11 @@
 /*MEDIA QUERIES FOR MD DEVICES (<768px)*/
 @media screen and (max-width:768px) {
 
+    body {
+        overflow-x: hidden;
+        width: 100%;
+    }
+
     .headerbar {
         padding: 1rem 1rem 1rem 1rem;
         display: block;
@@ -277,7 +287,12 @@
 }
 
 /*MEDIA QUERIES FOR L DEVICES (<992px)*/
-@media screen and (min-width:992px) {
+@media screen and (max-width:992px) {
+
+    body {
+        overflow-x: hidden;
+        width: 100%;
+    }
 
     .headerbar {
         padding: 1rem 1rem 1rem 1rem;
@@ -363,6 +378,18 @@
 
     .open {
         right: 0;
+    }
+
+}
+
+@media screen and (min-width:1200px) {
+
+    .headerbar__mobile {
+        display: none;
+    }
+    
+    .headerbar__mobile--close {
+        display: none;
     }
 
 }
