--- a/css/media.css
+++ b/css/media.css
@@ -1,5 +1,7 @@
 /*MEDIA QUERIES FOR XXS DEVICES (<320px)*/
 @media screen and (max-width:320px) {
+
+
 /*RESPONSIVE HEADER START*/
     body {
         overflow-x: hidden;
@@ -94,57 +96,61 @@
 /*RESPONSIVE HEADER END*/
 
 /*HERO SECTION START*/
-    .hero__mask {
+.container-100-1 {
+    flex-direction: column-reverse;
+}
 
-        padding: 1rem 1rem 1rem 1rem;
-    }
+.container-100-1 {
+    flex-direction: column-reverse;
+    width: 100%;
+    padding: 0rem 1rem 0rem 1rem;
+}
 
-    .hero__container {
-        width: 100%;
-        flex-direction: column-reverse;
-        align-items: start;
-        flex-wrap: nowrap;
-    }
+.container-50-2 {
+    text-align: center;
+    width: 100%;
+    height: 50%;
+}
 
-    .hero__container--left {
-        padding: 0;
-        margin-top: -2.5rem;
-        width: 100%;
-        height: auto;
-    }
+h1 {
+    font-size: 2.5rem;
+    width: 100%;
+}
 
-    .headline {
-        line-height: 1.2;
-        font-size: 3.5rem;
-    }
+p {
+    padding-top: 1rem;
+    font-size: 1.2rem;
+}
 
-    .hero__container--left p {
-        margin-top: -1.5rem
-    }
+.container-50-2 > img {
+    width: 70%;
+    padding-bottom: 1rem;
+}
+/*HERO SECTION END*/
 
-    .hero__container--left button {
-        transition: none;
-    }
+/*ABOUT SECTON START*/
+.section-100-100--mobile {
+    padding-bottom: 1%;
+    height: 300vh;
+}
 
-    .hero__container--left button:hover {
-        transform: none;
-        background-color: #af37ff;
-    }
+.grid-container {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    gap: 35px;
+    text-align: center;
+    width: 100%;
+    place-items: center;
+}
 
-    .hero__container--right {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        width: 100%;
-        height: 50%;
-    }
+.grid-card {
+    margin-top: 3.5rem;
+}
 
-    .hero__container--right img {
-        width: 100%;
-        padding-top: 2.5rem;
-        align-content: center;
-    }
-    /*HERO SECTION END*/
+.shape-divider--bottom {
+    margin-bottom: -8px;
+}
+/*ABOUT SECTION END*/
 
 }
 
@@ -245,69 +251,72 @@
 /*RESPONSIVE HEADER END*/
 
 /*HERO SECTION START*/
-.hero__mask {
-    padding: 1rem 1rem 1rem 1rem;
-}
-
-.hero__container {
-    width: 100%;
+.container-100-1 {
     flex-direction: column-reverse;
-    align-items: start;
-    flex-wrap: nowrap;
 }
 
-.hero__container--left {
-    padding: 0;
-    margin-top: -2.5rem;
+.container-100-1 {
+    flex-direction: column-reverse;
+    width: 100%;
+    padding: 0rem 1rem 0rem 1rem;
+}
+
+.container-50-2 {
+    text-align: center;
     width: 100%;
     height: 50%;
 }
 
-.headline {
-    line-height: 1.2;
-    font-size: 3.5rem;
-}
-
-.hero__container--left p {
-    margin-top: -1.5rem
-}
-
-.hero__container--left button {
-    transition: none;
-}
-
-.hero__container--left button:hover {
-    transform: none;
-    background-color: #af37ff;
-}
-
-.hero__container--right {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+h1 {
+    font-size: 2.5rem;
     width: 100%;
-    height: 50%;
 }
 
-.hero__container--right img {
-    width: 90%;
-    padding-top: 2.5rem;
-    align-content: center;
+p {
+    padding-top: 1rem;
+    font-size: 1.2rem;
+}
+
+.container-50-2 > img {
+    width: 70%;
+    padding-bottom: 4rem;
 }
 /*HERO SECTION END*/
 
+/*ABOUT SECTON START*/
 
+.section-100-100--mobile {
+    padding-bottom: 1%;
+    height: 300vh;
+}
+
+.container-100-1--mobile {
+    flex-direction: column-reverse;
+}
+
+.grid-container {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    gap: 35px;
+    text-align: center;
+}
+
+.grid-card {
+    margin-right: auto;
+}
+
+.shape-divider--bottom {
+    margin-bottom: -8px;
+}
+
+/*ABOUT SECTION END*/
 
 }
 
-/*MEDIA QUERIES FOR MD DEVICES (<768px)*/
+/*MEDIA QUERIES FOR MD DEVICES (>768px)*/
 @media screen and (max-width:768px) {
 
 /*RESPONSIVE NAVBAR START*/
-    body {
-        overflow-x: hidden;
-        width: 100%;
-    }
 
     .headerbar {
         padding: 1rem 1rem 1rem 1rem;
@@ -397,58 +406,48 @@
 /*RESPONSIVE NAVBAR END*/
 
 /*HERO SECTION START*/
-.hero__mask {
-    padding: 1rem 1rem 1rem 1rem;
-}
-
-.hero__container {
-    width: 100%;
+.container-100-1 {
     flex-direction: column-reverse;
-    align-items: start;
-    flex-wrap: nowrap;
 }
 
-.hero__container--left {
-    padding: 0;
-    margin-top: -2.5rem;
+.container-100-1 {
+    flex-direction: column-reverse;
+    width: 100%;
+    padding: 0rem 1rem 0rem 1rem;
+}
+
+.container-50-2 {
+    text-align: center;
     width: 100%;
     height: 50%;
 }
 
-.headline {
-    line-height: 1.2;
-    font-size: 3.5rem;
-}
-
-.hero__container--left p {
-    margin-top: -1.5rem
-}
-
-.hero__container--left button {
-    transition: none;
-}
-
-.hero__container--left button:hover {
-    transform: none;
-    background-color: #af37ff;
-}
-
-.hero__container--right {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+h1 {
+    font-size: 5rem;
     width: 100%;
-    height: 50%;
 }
 
-.hero__container--right img {
-    width: 90%;
-    padding-top: 2.5rem;
-    align-content: center;
+p {
+    padding-top: 1rem;
+    font-size: 1.6rem;
+}
+
+.container-50-2 > img {
+    width: 50%;
+    padding-bottom: 2rem;
 }
 /*HERO SECTION END*/
 
+/*ABOUT SECTION START*/
 
+.grid-container {
+    place-items: center;
+    width: 60%;
+    row-gap: 35px;
+    column-gap: 35px;
+    
+}
+/*ABOUT SECTION END*/
 }
 
 /*MEDIA QUERIES FOR L DEVICES (<992px)*/
@@ -546,8 +545,6 @@
         right: 0;
     }
 /*RESPONSIVE NAVBAR END*/
-
-
 
 }
 
